# mindspeech

./: README.md  ollama-testing.ipynb  pyproject.toml  requirements.txt  setup.sh
