[tool.poetry]
name = "mindspeech"
version = "0.1.0"
description = "LLM based interface for automation workflows"
authors = ["Adam Pippert <adam.pippert@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
langchain = "^0.1.12"
langchain-community = "^0.0.28"
langchain-core = "^0.1.31"
langchain-cli = "^0.0.21"
langsmith = "^0.1.24"
ansible-navigator = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
